reduce elements in home section animation and fix navbar menu issues on mobile

--- a/sass/_background-animated.scss
+++ b/sass/_background-animated.scss
@@ -8,10 +8,14 @@
 
   border-bottom: solid 7px components.$dark-secondary-color;
   .conteiner-background {
+    z-index: 0;
+    display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 0;
-    .carta {
+    .carta {   
+      background-color: red;
+      width: 100%;
+      height: 400px;
       z-index: 1;
     }
     $shooting-time: 5000ms;
@@ -63,10 +67,10 @@
           transform: translateX(50%) rotateZ(-45deg);
         }
 
-        @for $i from 1 through 20 {
+        @for $i from 1 through 5 {
           &:nth-child(#{$i}) {
             $delay: random(9999) + 0ms;
-            
+
             top: calc(30% - #{random(1000) - 200px});
             left: calc(50% - #{random(300) + 0px});
             animation-delay: $delay;
