--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -9,10 +9,19 @@ body {
   margin: 0;
 }
 
+section{
+  margin-top: 5rem;
+}
+
 .nav {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
   width: 100%;
   height: 5rem;
   border-bottom: solid 7px components.$medium-secondary-color;
@@ -46,6 +55,7 @@ body {
     align-items: center;
     justify-content: center;
     border-bottom: none;
+    z-index: 2;
     a {
       text-decoration: none;
       padding: 15px;
